--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,4 +1,4 @@
-name: Update Weather in README
+name: Update Weather Information
 
 on:
   schedule:
@@ -8,23 +8,24 @@ on:
 jobs:
   update-weather:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.9'
 
-      - name: Install dependencies
-        run: pip install requests
+      - name: Install requests
+        run: |
+          pip install requests
 
-      - name: Update Weather in README
-        run: python update_weather.py
+      - name: Fetch weather data
+        run: |
+          python update_weather.py
 
-      - name: Commit and Push changes
+      - name: Commit updated README
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
