--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,7 +2,7 @@ name: Update Weather Information
 
 on:
   schedule:
-    - cron: "0 * * * *"  # Cập nhật mỗi giờ
+    - cron: "0 */3 * * *"  # Cập nhật mỗi 3 giờ
   workflow_dispatch:  # Cho phép chạy thủ công
 
 jobs:
